[package]
authors = ['Eave Developers']
edition = '2018'
homepage = 'https://eavenetwork.com'
license = 'Apache 2.0'
name = 'steam-runtime'
repository = 'https://github.com/eavenetwork/eave'
version = '0.1.0'
build = "build.rs"

[dependencies]
smallvec = "1.4.0"
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.124", optional = true, default-features = false }
serde_json = "1.0.64"
hex = { version = "0.4", default-features = false, optional = true }
hex-literal = { version = "0.3.1" }
evm = { version = "0.26.0", optional = true, default-features = false }

# Substrate dependencies
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.7", default-features = false, optional = true }
frame-executive = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.7", default-features = false }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.7", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.7", default-features = false }
frame-system-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.7", default-features = false }
frame-try-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.7", default-features = false, optional = true }

pallet-aura = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.7", default-features = false}
pallet-authorship = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.7", default-features = false}
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.7", default-features = false }
pallet-bounties = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.7", default-features = false }
pallet-collective = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.7", default-features = false }
pallet-democracy = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.7", default-features =false }
pallet-elections-phragmen = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.7", default-features = false }
pallet-indices = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.7", default-features = false }
pallet-membership = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.7", default-features = false }
pallet-multisig = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.7", default-features = false }
pallet-offences = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.7", default-features = false }
pallet-proxy = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.7", default-features = false }
pallet-recovery = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.7", default-features = false }
pallet-session = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.7", default-features = false, features = ["historical"] }
pallet-scheduler = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.7", default-features = false }
pallet-sudo = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.7", default-features = false }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.7", default-features = false }
pallet-tips = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.7", default-features = false }
pallet-transaction-payment = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.7", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.7", default-features = false }
pallet-treasury = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.7", default-features = false }
pallet-utility = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.7", default-features = false }

max-encoded-len = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.7", default-features = false }

sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.7", default-features = false }
sp-application-crypto = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.7", default-features = false }
sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.7", default-features = false }
sp-consensus-aura = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.7", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.7", default-features = false }
sp-inherents = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.7", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.7", default-features = false }
sp-offchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.7", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.7", default-features = false }
sp-session = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.7", default-features = false }
sp-staking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.7", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.7", default-features = false }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.7", default-features = false }
sp-version = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.7", default-features = false }

libsecp256k1 = { version = "0.3.4", default-features = false, optional = true }

# cumulus
cumulus-pallet-aura-ext = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.7", default-features = false }
cumulus-primitives-core = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.7", default-features = false }
cumulus-primitives-utility = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.7", default-features = false }
cumulus-primitives-timestamp = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.7", default-features = false }
cumulus-pallet-parachain-system = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.7", default-features = false }
cumulus-pallet-dmp-queue = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.7", default-features = false }
cumulus-pallet-xcmp-queue = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.7", default-features = false }
cumulus-pallet-xcm = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.7", default-features = false }
parachain-info = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.7", default-features = false }

# Polkadot dependencies
polkadot-parachain = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.5", default-features = false }
xcm = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.5", default-features = false }
xcm-executor = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.5", default-features = false }
xcm-builder = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.5", default-features = false }
pallet-xcm = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.7", default-features = false }

#orml
orml-auction = { path = "../../ecosystem-pallets/orml/auction", default-features = false }
orml-authority = { path = "../../ecosystem-pallets/orml/authority", default-features = false }
orml-benchmarking = { path = "../../ecosystem-pallets/orml/benchmarking", default-features = false, optional = true }
orml-oracle = { path = "../../ecosystem-pallets/orml/oracle", default-features = false }
orml-oracle-rpc-runtime-api = { path = "../../ecosystem-pallets/orml/oracle/rpc/runtime-api", default-features = false }
orml-gradually-update = { path = "../../ecosystem-pallets/orml/gradually-update", default-features = false }
orml-tokens = { path = "../../ecosystem-pallets/orml/tokens", default-features = false }
orml-traits = { path = "../../ecosystem-pallets/orml/traits", default-features = false }
orml-vesting = { path = "../../ecosystem-pallets/orml/vesting", default-features = false }
orml-rewards = { path = "../../ecosystem-pallets/orml/rewards", default-features = false }
orml-nft= { path = "../../ecosystem-pallets/orml/nft", default-features = false }
orml-unknown-tokens = { path = "../../ecosystem-pallets/orml/unknown-tokens", default-features = false }
orml-xtokens = { path = "../../ecosystem-pallets/orml/xtokens", default-features = false }
orml-xcm-support = { path = "../../ecosystem-pallets/orml/xcm-support", default-features = false }

# local dependencies
acala-primitives = { path = '../../ecosystem-pallets/aca/primitives', default-features = false }
## eave-primitives = { package = "eave-primitives", path = "../../primitives", default-features = false }
eave-runtime-common = { path = "../common", default-features = false }
module-airdrop = { path = '../../ecosystem-pallets/aca/modules/airdrop', default-features = false }
module-auction-manager = { path = '../../ecosystem-pallets/aca/modules/auction-manager', default-features = false }
module-cdp-engine = { path = '../../ecosystem-pallets/aca/modules/cdp-engine', default-features = false }
module-cdp-treasury = { path = '../../ecosystem-pallets/aca/modules/cdp-treasury', default-features = false }
module-collator-selection = { path = "../../ecosystem-pallets/aca/modules/collator-selection", default-features = false }
module-currencies = { path = '../../ecosystem-pallets/aca/modules/currencies', default-features = false }
module-dex = { path = '../../ecosystem-pallets/aca/modules/dex', default-features = false }
module-emergency-shutdown = { path = "../../ecosystem-pallets/aca/modules/emergency-shutdown", default-features = false }
module-evm = { path = "../../ecosystem-pallets/aca/modules/evm", default-features = false }
module-evm-accounts = { path = "../../ecosystem-pallets/aca/modules/evm-accounts", default-features = false }
module-evm-bridge = { path = "../../ecosystem-pallets/aca/modules/evm-bridge", default-features = false }
module-evm-manager = { path = "../../ecosystem-pallets/aca/modules/evm-manager", default-features = false }
module-evm-rpc-runtime-api = { path = "../../ecosystem-pallets/aca/modules/evm/rpc/runtime_api", default-features = false }

module-homa = { path = '../../ecosystem-pallets/aca/modules/homa', default-features = false }
module-homa-validator-list = { path = '../../ecosystem-pallets/aca/modules/homa-validator-list', default-features = false }
module-honzon = { path = '../../ecosystem-pallets/aca/modules/honzon', default-features = false }
module-incentives = { path = '../../ecosystem-pallets/aca/modules/incentives', default-features = false }
module-loans = { path = '../../ecosystem-pallets/aca/modules/loans', default-features = false }
module-nft = { path = '../../ecosystem-pallets/aca/modules/nft', default-features = false }
module-nominees-election = { path = '../../ecosystem-pallets/aca/modules/nominees-election', default-features = false }
module-polkadot-bridge = { path = '../../ecosystem-pallets/aca/modules/polkadot-bridge', default-features = false }
module-prices = { path = '../../ecosystem-pallets/aca/modules/prices', default-features = false }
module-staking-pool = { path = '../../ecosystem-pallets/aca/modules/staking-pool', default-features = false }
module-staking-pool-rpc-runtime-api = { path = '../../ecosystem-pallets/aca/modules/staking-pool/rpc/runtime-api', default-features = false }
module-support = { path = '../../ecosystem-pallets/aca/modules/support', default-features = false }
module-transaction-payment = { path = '../../ecosystem-pallets/aca/modules/transaction-payment', default-features = false }
# ecosystem dependencies
ecosystem-renvm-bridge = { path = "../../ecosystem-pallets/ren/renvm-bridge", default-features = false }
ecosystem-chainsafe = { path = "../../ecosystem-pallets/chainsafe", default-features = false }
ecosystem-starport = { path = "../../ecosystem-pallets/starport", default-features = false }
ecosystem-compound-cash = { path = "../../ecosystem-pallets/compound-cash", default-features = false }
chainbridge = { git = "https://github.com/AcalaNetwork/chainbridge-substrate", default-features = false }

[build-dependencies]
substrate-wasm-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.7" }

[dev-dependencies]
libsecp256k1 = "0.3.4"
hex = "0.4.0"

sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.7" }
sp-trie = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.7" }

cumulus-primitives-parachain-inherent = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.7" }
cumulus-test-relay-sproof-builder = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.7" }

eave-service = {  path = "../../bin/service" }


[features]
default = ["std"]
no_std = []
std = [
	"codec/std",
	"serde",
	"hex/std",

	"frame-benchmarking/std",
	"frame-executive/std",
	"frame-support/std",
	"frame-system-rpc-runtime-api/std",
	"frame-system/std",
	"frame-try-runtime/std",

	"pallet-aura/std",
	"pallet-authorship/std",
	"pallet-balances/std",
	"pallet-bounties/std",
	"pallet-collective/std",
	"pallet-democracy/std",
	"pallet-elections-phragmen/std",
	"pallet-indices/std",
	"pallet-membership/std",
	"pallet-multisig/std",
	"pallet-proxy/std",
	"pallet-recovery/std",
	"pallet-scheduler/std",
	"pallet-session/std",
	"pallet-sudo/std",
	"pallet-timestamp/std",
	"pallet-tips/std",
	"pallet-transaction-payment/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-treasury/std",
	"pallet-utility/std",

  	"sp-io/std",
	"sp-api/std",
	"sp-block-builder/std",
	"sp-consensus-aura/std",
 	"sp-core/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-staking/std",
 	"sp-std/std",
	"sp-transaction-pool/std",
	"sp-version/std",
	"pallet-bounties/std",
	"pallet-tips/std",


	"cumulus-pallet-aura-ext/std",
	"cumulus-primitives-core/std",
	"cumulus-primitives-utility/std",
	"cumulus-primitives-timestamp/std",
	"cumulus-pallet-parachain-system/std",
	"cumulus-pallet-dmp-queue/std",
	"cumulus-pallet-xcmp-queue/std",
	"cumulus-pallet-xcm/std",
	"parachain-info/std",

	"polkadot-parachain/std",
	"xcm/std",
	"xcm-executor/std",
	"xcm-builder/std",
	"pallet-xcm/std",


	"orml-auction/std",
	"orml-authority/std",
	"orml-benchmarking/std",
	"orml-oracle-rpc-runtime-api/std",
	"orml-oracle/std",
	"orml-gradually-update/std",
	"orml-tokens/std",
	"orml-traits/std",
	"orml-vesting/std",
	"orml-rewards/std",
	"orml-nft/std",
#	"orml-unknown-tokens/std",
#	"orml-xtokens/std",
#	"orml-xcm-support/std",

	"module-transaction-payment/std",
 	"module-airdrop/std",
 	"module-auction-manager/std",
 	"module-cdp-engine/std",
 	"module-cdp-treasury/std",
	"module-collator-selection/std",
 	"module-currencies/std",
 	"module-dex/std",
  	"module-emergency-shutdown/std",

  	"module-evm/std",
  	"module-evm-accounts/std",
  	"module-evm-bridge/std",
  	"module-evm-manager/std",

 	"module-honzon/std",
 	"module-loans/std",
 	"module-nft/std",
 	"module-prices/std",
 	"module-incentives/std",
 	"module-support/std",
 	"module-homa/std",
 	"module-nominees-election/std",
 	"module-staking-pool/std",
 	"module-staking-pool-rpc-runtime-api/std",
 	"module-polkadot-bridge/std",
	"acala-primitives/std",
	"eave-runtime-common/std",

 	"module-evm-rpc-runtime-api/std",
	"ecosystem-renvm-bridge/std",
	"ecosystem-chainsafe/std",
	"ecosystem-chainsafe/std",
	"ecosystem-starport/std",
	"chainbridge/std",

]

runtime-benchmarks = [
	"frame-benchmarking",
	"orml-benchmarking",
	"libsecp256k1/hmac",

	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-collective/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"orml-authority/runtime-benchmarks",
	"chainbridge/runtime-benchmarks",

	"orml-vesting/runtime-benchmarks",
	"orml-tokens/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
	"xcm-builder/runtime-benchmarks",
	"pallet-xcm/runtime-benchmarks",


	"module-nft/runtime-benchmarks",

	"sp-api/disable-logging",
]

# When enabled, the runtime api will not be build.
#
# This is required by Cumulus to access certain types of the
# runtime without clashing with the runtime api exported functions
# in WASM.
disable-runtime-api = []
with-ethereum-compatibility = [
	"evm",
	"module-evm/with-ethereum-compatibility",
	"eave-runtime-common/with-ethereum-compatibility",
]
try-runtime = [
	"frame-try-runtime",
	"frame-executive/try-runtime",
	"frame-system/try-runtime",

	"pallet-aura/try-runtime",
	"pallet-authorship/try-runtime",
	"pallet-balances/try-runtime",
	"pallet-bounties/try-runtime",
	"pallet-collective/try-runtime",
	"pallet-democracy/try-runtime",
	"pallet-elections-phragmen/try-runtime",
	"pallet-indices/try-runtime",
	"pallet-membership/try-runtime",
	"pallet-multisig/try-runtime",
	"pallet-proxy/try-runtime",
	"pallet-recovery/try-runtime",
	"pallet-scheduler/try-runtime",
	"pallet-session/try-runtime",
	"pallet-sudo/try-runtime",
	"pallet-timestamp/try-runtime",
	"pallet-tips/try-runtime",
	"pallet-transaction-payment/try-runtime",
	"pallet-treasury/try-runtime",
	"pallet-utility/try-runtime",

	"orml-auction/try-runtime",
	"orml-authority/try-runtime",
	"orml-oracle/try-runtime",
	"orml-gradually-update/try-runtime",
	"orml-tokens/try-runtime",
	"orml-vesting/try-runtime",
	"orml-rewards/try-runtime",
	"orml-nft/try-runtime",

	"module-transaction-payment/try-runtime",
	"module-airdrop/try-runtime",
	"module-auction-manager/try-runtime",
	"module-cdp-engine/try-runtime",
	"module-cdp-treasury/try-runtime",
	"module-collator-selection/try-runtime",
	"module-currencies/try-runtime",
	"module-dex/try-runtime",
	"module-emergency-shutdown/try-runtime",
	"module-evm/try-runtime",
	"module-evm-accounts/try-runtime",
	"module-evm-bridge/try-runtime",
	"module-evm-manager/try-runtime",
	"module-honzon/try-runtime",
	"module-loans/try-runtime",
	"module-nft/try-runtime",
	"module-prices/try-runtime",
	"module-incentives/try-runtime",
	"module-homa/try-runtime",
	"module-nominees-election/try-runtime",
	"module-staking-pool/try-runtime",
	"module-polkadot-bridge/try-runtime",

	"ecosystem-renvm-bridge/try-runtime",
	"ecosystem-chainsafe/try-runtime",
	"ecosystem-starport/try-runtime",
	"ecosystem-compound-cash/try-runtime",
]