[package]
name = "eave-pallet-nft-benchmarking"
version = "0.1.0"
authors = ["Eave Protocol"]
edition = "2018"

[dependencies]
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
pallet-proxy = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
orml-nft = { path = "../../../ecosystem-pallets/orml/nft", default-features = false }
orml-traits = { path = "../../../ecosystem-pallets/orml/traits", default-features = false }
eave-pallet-currencies = { path = "../../../pallets/currencies", default-features = false }
eave-pallet-nft = {  path = "../../nft", default-features = false }
eave-primitives = { package = "eave-primitives", path = "../../../primitives", default-features = false }
eave-pallet-support = { package = "eave-pallet-support", path = "../../support", default-features = false }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }

[dev-dependencies]
serde = { version = "1.0.101" }
codec = { package = "parity-scale-codec", version = "2.0.0", features = ["derive"] }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
orml-tokens = { path = "../../../ecosystem-pallets/orml/tokens", default-features = false }
pallet-utility = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
eave-pallet-support = { package = "eave-pallet-support", path = "../../../pallets/support" }

[features]
default = ["std"]
std = [
	"sp-runtime/std",
	"sp-std/std",
	"frame-support/std",
	"frame-system/std",
	"frame-benchmarking/std",
	"pallet-proxy/std",
	"eave-pallet-nft/std",
	"eave-pallet-support/std",
	"orml-nft/std",
	"orml-traits/std",
]
