[package]
name = "eave-palletshy-benchmarking"
version = "0.7.3"
authors = ["Eave Protocol"]
edition = "2018"

[dependencies]
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
orml-oracle = { path = "../../../orml/oracle", default-features = false }
orml-traits = { path = "../../../orml/traits", default-features = false }
eave-pallet-shy = { package = "eave-pallet-shy", path = "../../shy", default-features = false }
eave-pallet-prices = { package = "eave-pallet-prices", path = "../../prices", default-features = false }
eave-primitives = { package = "eave-primitives", path = "../../../primitives", default-features = false }
eave-pallet-support = { package = "eave-pallet-support", path = "../../support", default-features = false }
eave-pallet-shy-engine = { package = "eave-pallet-shy-engine", path = "../../shy_engine", default-features = false }
eave-pallet-loans = { package = "eave-pallet-loans", path = "../../loans", default-features = false }

[dev-dependencies]
serde = { version = "1.0.101" }
codec = { package = "parity-scale-codec", version = "2.0.0", features = ["derive"] }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
orml-currencies = { path = "../../../orml/currencies", default-features = false }
orml-tokens = { path = "../../../orml/tokens", default-features = false }
eave-pallet-shy-treasury = { package = "eave-pallet-shy-treasury", path = "../../shy_treasury", default-features = false }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }

[features]
default = ["std"]
std = [
	"sp-runtime/std",
	"sp-std/std",
	"frame-support/std",
	"frame-system/std",
	"frame-benchmarking/std",
	"eave-pallet-shy/std",
	"eave-pallet-shy-engine/std",
	"eave-pallet-loans/std",
	"eave-pallet-support/std",
	"orml-oracle/std",
	"orml-traits/std",
	"eave-palletprices/std",
]
